# github-utils

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  claude-code-review.yml  claude.yml  deploy-lambda.yml  lambda-package.yml  node-ci.yml  python-ci.yml  rust-ci.yml  self-claude-code-review.yml  self-claude.yml
docs/superpowers/plans/: 2026-07-20-shared-ci-workflows.md  2026-07-20-shared-workflows.md  2026-07-21-lambda-deploy-migration.md  2026-07-21-release-script.md
docs/superpowers/specs/: 2026-07-20-shared-ci-workflows-design.md  2026-07-20-shared-workflows-design.md  2026-07-21-lambda-deploy-migration-design.md  2026-07-21-python-ci-dogfood-design.md  2026-07-21-release-script-design.md
scripts/: release.py  test_release.py
