[project]
name = "github-utils"
version = "0.0.0"
description = "Reusable GitHub Actions workflows and release tooling"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pytest>=8",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
# scripts/test_release.py does `from release import ...`.
known-first-party = ["release"]

[tool.pytest.ini_options]
testpaths = ["scripts"]
